--- a/loaded_dice.ipynb
+++ b/loaded_dice.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Loaded Dice\n",
     "## Who Can You Trust?\n",
-    "![image info](./loaded_die.jpg)"
+    "![image info](./loaded_dice.jpg)"
    ]
   },
   {
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,11 +217,9 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "656ea1034e3e83f72c5099c965ac1613d4d47ef267ff66f7ff55351483f60e60"
-  },
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit ('tim728': conda)",
+   "display_name": "Python 3.9.9 ('treeseq')",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -234,9 +232,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.9"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "512433f0a6deda407a2c04d43fdc27f6c6f4622b84931c82ebfe3f16cc46368e"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
